--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   }
 }
